...
    <string name="app_name">Nutrition Counter</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_address">Enter Address</string>
...
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>
    <string name="phone">Phone</string>
    <string name="sex">Sex (M or F)</string>
    <string name="calculate_and_complete_profile">Calculate and Complete Profile</string>
    <string name="title_activity_main">Nutrition App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="slideshow">Slideshow</string>
    <string name="today_s_count">Today\'s Count</string>
    <string name="add_food_item">Add Food item</string>
    <string name="remaining">Remaining</string>
    <string name="calories">Calories</string>
    <string name="fiber">Fiber</string>
...
    <string name="done">Done</string>
    <string name="search">Search items</string>
    <string name="either_you_run_the_day_or_the_day_runs_you">"Either you run the day, or the day runs you"</string>
    <string name="quote_of_the_day">Quote of the Day</string>
    <string name="add_item">Add Item</string>
    <string name="delete_account">Delete Account</string>
    <string name="recalculate">Recalculate</string>
    <string name="sex1">Sex</string>
    <string name="max_calories">Max. Calories</string>
    <string name="max_fiber">Max. Fiber</string>
    <string name="max_proteins">Max. Proteins</string>
    <string name="search_item">Search Item</string>
    <string name="calorie_tracker">Calorie Tracker</string>
...
