...
                    android:padding="6dip"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRecal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorTextHint"
            android:onClick="onClick"
            android:text="@string/recalculate" />
...
